--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "validator": "^13.11.0"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
